@startuml

title __TASK08's Class Diagram__\n

  namespace  {
    namespace odel {
      interface Model.ChristmasTree {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class Model.Girland {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class Model.GreenTree {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class Model.Presents {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class Model.Star {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class Model.TreeDecorator {
      }
    }
  }
  

  namespace  {
    namespace om.example.task08 {
      class com.example.task08.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.task08 {
      class com.example.task08.HelloController {
      }
    }
  }
  

  Model.Girland -up-|> Model.TreeDecorator
  Model.GreenTree .up.|> Model.ChristmasTree
  Model.Presents -up-|> Model.TreeDecorator
  Model.Star -up-|> Model.TreeDecorator
  Model.TreeDecorator .up.|> Model.ChristmasTree
  Model.TreeDecorator o-- Model.ChristmasTree : tree
  com.example.task08.HelloApplication -up-|> javafx.application.Application
  com.example.task08.HelloController .up.|> javafx.fxml.Initializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
